<resources>

    <string name="app_name">CardMaster</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_start_screen">Card Master</string>
    <string name="start_btn_gameStart">게임시작</string>
    <string name="start_btn_ranking">랭킹</string>
    <string name="start_btn_option">옵션</string>
    <string name="start_btn_help">도움말</string>
    <string name="start_btn_exit">종료</string>
    <string name="title_activity_game_start">GameStartActivity</string>
    <string name="title_activity_ranking">RankingActivity</string>
    <string name="title_activity_option">OptionActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="help">- 도움말 -</string>
    <string name="rank_btn_ok">확인</string>
    <string name="btnStr_level_high">고급</string>
    <string name="btnStr_level_medium">중급</string>
    <string name="btnStr_level_low">초급</string>
    <string name="title_activity_set_level">SetLevel</string>
    <string name="text_playTime">"시간 : "</string>
    <string name="text_score">"점수 : "</string>
    <string name="title_activity_game_finish">GameFinish</string>
    <string name="str_gameClear">Game Clear !!</string>
    <string name="gameFinish_name">Name</string>
    <string name="btn_inputName_ok">확 인</string>
    <string name="backgroundsound">배경음</string>
    <string name="effectsound">효과음</string>
    <string name="img_sound_sourceSite">이미지, 사운드 출처</string>
    <string name="backToTheMainScreen">돌아가기</string>
    <string name="todo">TODO</string>
    <string name="str_clearTime">클리어 타임</string>
    <string name="str_score">스코어</string>
    <string name="str_name">이름</string>

</resources>